--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,11 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
 
+    implementation "com.squareup.okhttp3:okhttp:4.10.0"
+    implementation 'com.google.code.gson:gson:2.9.1'
+    implementation "io.coil-kt:coil-compose:2.2.1"
+
+
     //Adding dependency for creating a notification
     implementation "androidx.core:core-ktx:1.9.0"
     //Adding dependency for worker
